--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
@@ -81,7 +81,7 @@
                   new List<Object>{
                        new { value = "private" , text = "Private Stream"  },
                        new { value = "public" , text = "Public Stream"  },
-                       new { value = "Unlisted" , text = "Unlisted Stream"  }
+                       new { value = "unlisted" , text = "Unlisted Stream"  }
                     },
                   "value",
                   "text",
