--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Transition.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Transition.cshtml
@@ -184,9 +184,8 @@
     </div>
 }
 <div>
-    <body>
-        // 1. The 'widget' div element contains the upload widget.
-        //    The 'player' div element contains the player IFrame.
+        @*// 1. The 'widget' div element contains the upload widget.
+        //    The 'player' div element contains the player IFrame.*@
         <div id="widget"></div>
         <div id="player"></div>
 
@@ -228,7 +227,6 @@
                 });
             }
         </script>
-    </body>
 </div>
 <div>
     @Html.ActionLink("Back to List", "Index")
