--- a/SmartRoom/SmartRoom/Areas/Forms/Views/Event/Edit.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Forms/Views/Event/Edit.cshtml
@@ -6,11 +6,12 @@
     @Scripts.Render("~/Scripts/angular.min.js")
     @Scripts.Render("~/Scripts/daypilot-all.min.js")
 }
-<h2>Edit</h2>
+<body>
+    <h2>Edit</h2>
 
-@{
-    Layout = null;
-}
+    @{
+        Layout = null;
+    }
     <style>
         p, body, td {
             font-family: Tahoma, Arial, Sans-Serif;
@@ -53,3 +54,4 @@
 
     </script>
 
+</body>
