--- a/SmartRoom/SmartRoom/Content/Site.css
+++ b/SmartRoom/SmartRoom/Content/Site.css
@@ -8,6 +8,10 @@ html, body {
     text-decoration: none;
 }
 
+.null {
+    margin-top: 100px;
+}
+
 .wrapper {
     margin-left: 5%;
     margin-right: 5%;
@@ -114,14 +118,16 @@ textarea {
         margin-top: 0px;
         margin-bottom: 10px;
     }
-    #sortable .class-container:hover{
-        opacity:1;
+
+    #sortable .class-container:hover {
+        opacity: 1;
     }
-    #sortable .class-container{
-        opacity:.85;
-        width:100%;
+
+    #sortable .class-container {
+        opacity: .85;
+        width: 100%;
         height: 100%;
-        margin:initial;
+        margin: initial;
         box-shadow: 0 0 4px 4px #afc9cf;
     }
 
@@ -164,10 +170,11 @@ textarea {
         width: 60%;
         text-align: right;
     }
-    .col-md-10 .checkbox{
-        width: 1%;
-        text-align: right;
-    }
+
+        .col-md-10 .checkbox {
+            width: 1%;
+            text-align: right;
+        }
 }
 
 .col-md-10 input {
@@ -253,7 +260,7 @@ a.navbar-brand {
     border: 5px solid #8ce4fa;
     border-radius: 10px;
     padding: 15px;
-    width: 25%;
+    min-width: 25%;
     float: left;
     height: 25%;
     margin: 10px;
@@ -283,47 +290,60 @@ a.navbar-brand {
         width: initial;
     }
 
-    .course-menu{
+.course-menu {
     text-align: center;
     border-style: solid;
     background-color: #fff;
     border: 3px solid #8ce4fa;
     border-radius: 5px;
     padding: 5px;
-    text-decoration:none;
-    font-weight:700;
-    color:black;
-    margin-right:5px;
+    text-decoration: none;
+    font-weight: 700;
+    color: black;
+    margin-right: 5px;
     float: left;
+}
+
+.course-hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-top: 2px solid #3cb3cf;
+}
+
+.course-table tbody tr td {
+    border-top: none;
+}
+
+.course-table tbody tr th {
+    border-top: 2px solid #3cb3cf;
+    border-bottom: 2px solid #3cb3cf;
+}
+
+.no-decorations a {
+    text-decoration: none;
+}
+
+.form-checkbox .col-md-10 .col-md-2 {
+    width: initial;
+    padding-left: initial;
+    font-weight: initial;
+}
+
+.announcements {
+    color: black;
+}
+
+    .announcements a {
+        color: black;
+        text-decoration: none;
     }
-    .course-hr{
-        margin-top:10px;
-        margin-bottom:10px;
-        border-top:2px solid #3cb3cf
+
+@media (min-width: 992px) {
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+        float: left;
     }
-    .course-table tbody tr td{
-        border-top:none;
+
+    .login .col-md-6 {
+        float: left;
     }
-    .course-table tbody tr th{
-        border-top:2px solid #3cb3cf;
-        border-bottom:2px solid #3cb3cf;
-    }
-    .no-decorations a{
-        text-decoration:none;
-    }
-    .form-checkbox .col-md-10 .col-md-2{
-        width: initial;
-        padding-left:initial;
-       font-weight:initial;
-    }
-    .announcements{
-    color:black;
-    }
-    .announcements a{
-    color:black;
-        text-decoration:none;
-    }
-    @media (min-width: 992px){
-.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float:initial;
-}}
+}
